[package]
name = "twodee"
version = "0.1.0"
edition = "2018"
authors = ["Jean-Pierre Cuvelliez <jpcuvelliez@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]
